[tool.poetry]
name = "supportbank"
version = "0.1.0"
description = ""
authors = ["Nabeel Husain <nabeelhusain03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
